--- a/GKarate/app/src/main/res/layout/activity_coach_selection.xml
+++ b/GKarate/app/src/main/res/layout/activity_coach_selection.xml
@@ -6,20 +6,24 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/Sporters"
         android:layout_width="125dp"
         android:layout_height="90dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="268dp"
         android:text="sporters bekijken"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="273dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/Symbols"
         android:layout_width="125dp"
         android:layout_height="90dp"
+        android:layout_marginTop="268dp"
+        android:layout_marginEnd="72dp"
         android:text="symbolen aanpassen"
-        tools:layout_editor_absoluteX="214dp"
-        tools:layout_editor_absoluteY="273dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -34,19 +38,25 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/SelectExercise"
         android:layout_width="125dp"
         android:layout_height="90dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="156dp"
         android:text="Selecteer oefening"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="157dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="goToExerciseSelection"/>
 
     <Button
-        android:id="@+id/button7"
+        android:id="@+id/AddExercise"
         android:layout_width="125dp"
         android:layout_height="90dp"
+        android:layout_marginTop="156dp"
+        android:layout_marginEnd="72dp"
         android:text="oefening toevoegen"
-        tools:layout_editor_absoluteX="214dp"
-        tools:layout_editor_absoluteY="157dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="goToNewExercise"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
