--- a/GKarate/app/src/main/res/layout/activity_new_exercise2.xml
+++ b/GKarate/app/src/main/res/layout/activity_new_exercise2.xml
@@ -9,17 +9,21 @@
         android:id="@+id/button8"
         android:layout_width="125dp"
         android:layout_height="90dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="272dp"
         android:text="linkerbeen"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="273dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button9"
         android:layout_width="125dp"
         android:layout_height="90dp"
+        android:layout_marginTop="272dp"
+        android:layout_marginEnd="72dp"
         android:text="rechterbeen"
-        tools:layout_editor_absoluteX="214dp"
-        tools:layout_editor_absoluteY="273dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -37,16 +41,20 @@
         android:id="@+id/button3"
         android:layout_width="125dp"
         android:layout_height="90dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="156dp"
         android:text="linkerhand"
-        tools:layout_editor_absoluteX="55dp"
-        tools:layout_editor_absoluteY="157dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button7"
         android:layout_width="125dp"
         android:layout_height="90dp"
+        android:layout_marginTop="156dp"
+        android:layout_marginEnd="72dp"
         android:text="rechterhand"
-        tools:layout_editor_absoluteX="214dp"
-        tools:layout_editor_absoluteY="157dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
