--- a/GKarate/app/src/main/res/layout/activity_new_exercise2.xml
+++ b/GKarate/app/src/main/res/layout/activity_new_exercise2.xml
@@ -45,7 +45,8 @@
         android:layout_marginTop="156dp"
         android:text="linkerhand"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="goToSelectKeypointLeftHand"/>
 
     <Button
         android:id="@+id/button7"
@@ -55,6 +56,7 @@
         android:layout_marginEnd="72dp"
         android:text="rechterhand"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="goToSelectKeypointRightHand"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
