Coach can add multiple moves

--- a/GKarate/app/src/main/res/layout/activity_exercise_summary.xml
+++ b/GKarate/app/src/main/res/layout/activity_exercise_summary.xml
@@ -6,13 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".ExerciseSummary">
 
+    <Button
+        android:id="@+id/addMove"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="80dp"
+        android:text="Voeg een beweging toe"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="addMove"/>
+
 
     <Button
-        android:id="@+id/maakSelectie"
+        android:id="@+id/save"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="25dp"
-        android:text="Opslaan"
+        android:text="Menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
