--- a/GKarate/app/src/main/res/layout/activity_recycler_model.xml
+++ b/GKarate/app/src/main/res/layout/activity_recycler_model.xml
@@ -62,14 +62,13 @@
 
     <TextView
         android:id="@+id/movesTextEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="227dp"
+        android:layout_height="24dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
         android:paddingLeft="10dp"
         android:text="moves"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
